[project]
name = "voxcpm-tts-server"
version = "1.0.0"
description = "FastAPI server for VoxCPM2 multilingual TTS with voice cloning"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "librosa>=0.11.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "voxcpm",
    "python-multipart",
]

[project.scripts]
voxcpm-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

# Use cu121 wheel — most stable on RunPod PyTorch 2.4.0 template
[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
name = "pytorch-cu121"

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
